# cc-switch-vision-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.example.toml  install.ps1  pyproject.toml  status.ps1  uninstall.ps1
.github/workflows/: ci.yml
src/cc_switch_vision_bridge/: __init__.py  cache.py  cli.py  config.py  credentials.py  mcp_launcher.py  profile_guard.py  proxy.py  transform.py  vision.py
tests/: conftest.py  test_cache.py  test_mcp_launcher.py  test_powershell_scripts.py  test_profile_guard.py  test_proxy.py  test_transform.py  test_vision.py
